--- a/Resume.html
+++ b/Resume.html
@@ -408,26 +408,10 @@
     </style>
 </head>
 <body>
-    <h1>CYBERFASCINATE</h1>
+    <h1>Cyber Sentinel🔏</h1>
     <p class="subtitle">Cybersecurity Researcher & Open-Source Developer</p>
 
-    <div class="section mission">
-        <div class="mission-header">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mission-icon">
-                <path d="M12 5a3 3 0 1 0-5.997.125 4 4 0 0 0-2.526 5.77 4 4 0 0 0 .556 6.588A4 4 0 0 0 12 18Z"></path>
-                <path d="M12 5a3 3 0 1 1 5.997.125 4 4 0 0 1 2.526 5.77 4 4 0 0 1-.556 6.588A4 4 0 0 1 12 18Z"></path>
-                <path d="M15 13a4.5 4.5 0 0 1-3-4 4.5 4.5 0 0 1-3 4"></path>
-                <path d="M17.599 6.5a3 3 0 0 0 .399-1.375"></path>
-                <path d="M6.003 5.125A3 3 0 0 0 6.401 6.5"></path>
-                <path d="M3.477 10.896a4 4 0 0 1 .585-.396"></path>
-                <path d="M19.938 10.5a4 4 0 0 1 .585.396"></path>
-                <path d="M6 18a4 4 0 0 1-1.967-.516"></path>
-                <path d="M19.967 17.484A4 4 0 0 1 18 18"></path>
-            </svg>
-            <h2>MISSION DIRECTIVE</h2>
-        </div>
-        <p>DEDICATED TO FORTIFYING DIGITAL LANDSCAPES THROUGH INNOVATIVE SECURITY RESEARCH AND ETHICAL HACKING. MY MISSION IS TO PROTECT CRITICAL INFRASTRUCTURE, EXPOSE VULNERABILITIES RESPONSIBLY, AND EDUCATE THE NEXT GENERATION OF CYBER DEFENDERS. EVERY SYSTEM HAS A WEAKNESS - FINDING IT FIRST IS OUR BEST DEFENSE.</p>
-    </div>
+    
 
     <!-- Pre-Animation State -->
     <div class="pre-animation" id="preAnimation">
