--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </a>
         </div>
         <div>
-            <a class="grid-link" href="/achievements">
+            <a class="grid-link" href="Achievements.html">
                 <div class="section">
                     <div class="grid-header">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="grid-icon">
