Added link to resume

--- a/Resume.html
+++ b/Resume.html
@@ -463,7 +463,7 @@
                 </svg>
                 <h2>Zishan_Resume.pdf</h2>
             </div>
-            <button class="download-button">
+            <button class="download-button" onclick="window.location.href='Zishan_Resume.pdf';">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="download-icon">
                     <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                     <polyline points="7 10 12 15 17 10"></polyline>
