Added link to blog

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             </a>
         </div>
         <div>
-            <a class="grid-link" href="/intel">
+            <a class="grid-link" href="blog.html">
                 <div class="section">
                     <div class="grid-header">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="grid-icon">
@@ -341,7 +341,7 @@
                             <path d="M16 13H8"></path>
                             <path d="M16 17H8"></path>
                         </svg>
-                        <h2>INTEL DROPS</h2>
+                        <h2>Cyber Archives</h2>
                     </div>
                     <p>Blog posts & research findings</p>
                     <div class="access-module">
