--- a/Achievements.html
+++ b/Achievements.html
@@ -100,7 +100,7 @@
 
         .grid .section h2 {
             font-size: 1.25rem; /* text-xl */
-            text-shadow: 0 0 5px #39FF14; /* neon-text */
+            color: #00DDEB; /* neon-blue */
         }
 
         .grid .section p {
